--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.3.3",
   "description": "A fully typed NodeJS library for integration with Paddle.",
   "type": "module",
-  "main": "dist/node-paddle-sdk.cjs.js",
+  "main": "dist/node-paddle-sdk.cjs",
   "module": "dist/node-paddle-sdk.es.js",
   "types": "dist/index.d.ts",
   "scripts": {
